# MotionClassification

./: .gitignore  CMakeLists.txt  mc_20150526.patch
Data/data/: scene.dtd
Data/data/jump/: 118_01.xml  118_02.xml  118_03.xml  118_04.xml  118_05.xml  118_06.xml  118_07.xml  118_08.xml  118_09.xml  118_10.xml
Data/data/kick/: 74_03.xml  74_04.xml  74_05.xml  74_06.xml  scene.dtd
Data/data/pickingUpBall/: 64_26.xml  64_27.xml  64_28.xml  64_29.xml
Data/data/placingBall/: 64_21.xml  64_22.xml  64_23.xml  64_24.xml
Data/data/run/: 09_01.xml  09_02.xml  09_03.xml  09_04.xml  09_05.xml  09_06.xml  09_07.xml  09_08.xml  09_09.xml  09_10.xml  09_11.xml  scene.dtd
Data/data/salsa/: 60_01.xml  60_02.xml  60_03.xml  60_04.xml  60_05.xml  60_06.xml  60_07.xml  60_08.xml  60_09.xml  60_10.xml
Data/data/standing/: 111_28.xml  113_21.xml  77_02.xml
Data/data/walk/: 07_01.xml  07_02.xml  07_03.xml  07_06.xml  07_07.xml  07_08.xml  07_09.xml  07_10.xml  07_11.xml
Data/learned/: jump  kick  learned_data.dtd  learned_data.xml  pickingUpBall  placingBall  run  salsa  standing  walk
MotionClassification/: AnimationCurve.cpp  AnimationCurve.h  AnnotationXmlHelper.cpp  AnnotationXmlHelper.h  BvhSceneXmlHelper.cpp  BvhSceneXmlHelper.h  BvhXmlNode.h  CMakeLists.txt  DataConvertor.cpp  DataConvertor.h  FbxSceneExporter.cpp  FbxSceneExporter.h  FbxSceneLoader.cpp  FbxSceneLoader.h  FbxSceneXmlHelper.cpp  FbxSceneXmlHelper.h  FbxXmlNode.h  JoinBaseData.cpp  JoinBaseData.h  KeyFrame.h  KeyFrameExtractor.cpp  KeyFrameExtractor.h  LearnDataContainer.cpp  LearnDataContainer.h  LearnDataXmlHelper.cpp  LearnDataXmlHelper.h  Main.cpp  Motion.cpp  Motion.h  MotionClassRecognizer.cpp  MotionClassRecognizer.h  MotionClassification.vcxproj  MotionClassification.vcxproj.filters  MotionClassifier.cpp  MotionClassifier.h  MotionComparator.cpp  MotionComparator.h  MotionFrame.cpp  MotionFrame.h  MotionObject.cpp  (+27 more)
MotionClassification/Release/: CL.read.1.tlog  CL.write.1.tlog  MotionClassification.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MotionClassification/bvh/: bvh.cpp  bvh.h  util.h
